Fixes to adhere to requirements of the java module system