@@ -1,2 +1,10 @@
 # data-access
 Contains services for accessing data storage from other dapla modules
+
+#### Add these as vm options in order to run unit-tests in IntelliJ:
+```
+--add-exports=io.grpc/io.opencensus.trace.propagation=ALL-UNNAMED
+--add-exports=io.grpc/io.opencensus.trace=ALL-UNNAMED
+--add-exports=io.grpc/io.opencensus.trace.export=ALL-UNNAMED
+--add-exports=io.grpc/io.opencensus.common=ALL-UNNAMED
+```
